k8s-configuration/artauction-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      name: app
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: artauction-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: general
              containerPort: 8080
              protocol: TCP
            - name: remotedebugging
              containerPort: 5005
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
